Update to current screenshots for work page.

--- a/work.html
+++ b/work.html
@@ -41,25 +41,15 @@
                 <h3>websites</h3>
             </div>
             <div>
-                <img src="./assets/images/ss-1.jpg" alt="Screenshot">
-                <p>Some title</p>
+                <img src="./assets/images/ss-ledger2.PNG" alt="Screenshot">
+                <p>Ledger</p>
             </div>
             <div>
-                <img src="./assets/images/ss-2.jpg" alt="Screenshot">
-                <p>Some title</p>
+                <img src="./assets/images/ss-mood.PNG" alt="Screenshot">
+                <p>Mood Journal</p>
             </div>
-            <div>
-                <img src="./assets/images/ss-3.jpg" alt="Screenshot">
-                <p>Some title</p>
-            </div>
-            <div>
-                <img src="./assets/images/ss-4.jpg" alt="Screenshot">
-                <p>Some title</p>
-            </div>
-            <div>
-                <img src="./assets/images/ss-5.jpg" alt="Screenshot">
-                <p>Some title</p>
-            </div>
+
+
         </div>
     </section>
 
@@ -69,24 +59,16 @@
                 <h3>projects</h3>
             </div>
             <div>
-                <img src="./assets/images/ss-1.jpg" alt="Screenshot">
-                <p>Some title</p>
+                <img src="./assets/images/ss-bwsavl.PNG" alt="Screenshot">
+                <p>Black Wall Street AVL</p>
             </div>
             <div>
-                <img src="./assets/images/ss-2.jpg" alt="Screenshot">
-                <p>Some title</p>
+                <img src="./assets/images/ss-ms.PNG" alt="Screenshot">
+                <p>Mindful & Strong</p>
             </div>
             <div>
-                <img src="./assets/images/ss-3.jpg" alt="Screenshot">
-                <p>Some title</p>
-            </div>
-            <div>
-                <img src="./assets/images/ss-4.jpg" alt="Screenshot">
-                <p>Some title</p>
-            </div>
-            <div>
-                <img src="./assets/images/ss-5.jpg" alt="Screenshot">
-                <p>Some title</p>
+                <img src="./assets/images/ss-whiskers.PNG" alt="Screenshot">
+                <p>Whiskers Rescue</p>
             </div>
         </div>
     </section>
