--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
                 <h3>websites</h3>
             </div>
             <div>
-                <img src="./assets/images/ss-bwsavl.PNG" alt="Screenshot">
+                <a href="https://blackwallstreetavl.com/"><img src="./assets/images/ss-bwsavl.PNG" alt="Screenshot"></a>
                 <p>Black Wall Street AVL</p>
             </div>
             <div>
@@ -49,7 +49,7 @@
                 <p>Mindful & Strong</p>
             </div>
             <div>
-                <img src="./assets/images/ss-whiskers.PNG" alt="Screenshot">
+              <a href="https://whiskersutah.org/"><img src="./assets/images/ss-whiskers.PNG" alt="Screenshot"></a>
                 <p>Whiskers Rescue</p>
             </div>
         </div>
@@ -59,11 +59,11 @@
                 <h3>projects</h3>
             </div>
             <div>
-                <img src="./assets/images/ss-ledger2.PNG" alt="Screenshot">
+              <a href="https://ledger.cyclic.app/"><img src="./assets/images/ss-ledger2.PNG" alt="Screenshot"></a>
                 <p>Ledger</p>
             </div>
             <div>
-                <img src="./assets/images/ss-mood.PNG" alt="Screenshot">
+              <a href="https://moodjournal.cyclic.app/"><img src="./assets/images/ss-mood.PNG" alt="Screenshot"></a>
                 <p>Mood Journal</p>
             </div>
         </div>
