Added new website.

--- a/work.html
+++ b/work.html
@@ -41,6 +41,10 @@
                 <h3>websites</h3>
             </div>
             <div>
+                <a href="https://hadleyshope.org/"><img src="./assets/images/ss-hh.PNG" alt="Screenshot"></a>
+                <p>Hadley's Hope</p>
+            </div>
+            <div>
                 <a href="https://blackwallstreetavl.com/"><img src="./assets/images/ss-bwsavl.PNG" alt="Screenshot"></a>
                 <p>Black Wall Street AVL</p>
             </div>
