Added FontAwesome integration

--- a/work.html
+++ b/work.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrea Pang</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Borel&family=Montserrat:wght@300;500;600&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <script src="https://kit.fontawesome.com/bb1dd7775a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
   </head>
 
   <body>
@@ -29,20 +30,23 @@
     </nav>
 
    <!-- Grid of screenshots -->
-    <section class="work">
+    <main class="work">
         <div class=" grid work-header">
             <h2 class="work-title">the work</h2>
             <img src="./assets/line.svg" alt="squiggle" class="title-underline
             ">
         </div>
 
-        <div class="grid work-container">
+        <section class="grid work-container">
             <div class=" grid work-section-title">
                 <h3>websites</h3>
             </div>
             <div>
-                <a href="https://hadleyshope.org/"><img src="./assets/images/ss-hh.PNG" alt="Screenshot"></a>
-                <p>Hadley's Hope</p>
+              <div>
+                <a href="https://hadleyshope.org/"><img src="./assets/images/ss-hh.PNG" alt="Screenshot"></a></div>
+                <div><p>Hadley's Hope</p>
+                <p>Tech used: <i class="fa-brands fa-html5" title="HTML5"></i> <i class="fa-brands fa-css3-alt" title="CSS3"></i> <i class="fa-brands fa-js" title="JavaScript"></i></p>
+              </div>
             </div>
             <div>
                 <a href="https://blackwallstreetavl.com/"><img src="./assets/images/ss-bwsavl.PNG" alt="Screenshot"></a>
@@ -56,9 +60,9 @@
               <a href="https://whiskersutah.org/"><img src="./assets/images/ss-whiskers.PNG" alt="Screenshot"></a>
                 <p>Whiskers Rescue</p>
             </div>
-        </div>
+          </section>
 
-        <div class="grid work-container">
+        <section class="grid work-container">
             <div class=" grid work-section-title">
                 <h3>projects</h3>
             </div>
@@ -70,8 +74,8 @@
               <a href="https://moodjournal.cyclic.app/"><img src="./assets/images/ss-mood.PNG" alt="Screenshot"></a>
                 <p>Mood Journal</p>
             </div>
-        </div>
-    </section>
+          </section>
+      </main>
 
     <!-- Bottom Divider -->
     <section class="grid">
