Added new freelance website project (LV)

--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<!-- Navbar -->
+		<!------ Navbar ------>
 		<nav class="top-nav">
 			<h1 class="nav-title"><a href="./index.html">Andrea Pang</a></h1>
 			<input id="menu-toggle" type="checkbox" />
@@ -31,13 +31,14 @@
 			</ul>
 		</nav>
 
-		<!-- Grid of screenshots -->
+		<!------ Grid of screenshots ------>
 		<main class="work">
 			<div class="grid work-header">
 				<h2 class="work-title">the work</h2>
 				<img src="./assets/line.svg" alt="squiggle" class="title-underline" />
 			</div>
 
+			<!------ PROJECTS ------>
 			<section class="grid work-container">
 				<div class="grid work-section-title">
 					<h3>projects</h3>
@@ -84,9 +85,25 @@
 				</div>
 			</section>
 
+			<!------ WEBSITES ------>
 			<section class="grid work-container">
 				<div class="grid work-section-title">
 					<h3>websites</h3>
+				</div>
+
+				<div class="work-card">
+					<div class="work-card-img">
+						<a href="https://libertyvillage.com/"
+							><img src="./assets/images/ss-lv.PNG" alt="Screenshot"
+						/></a>
+					</div>
+					<div class="work-card-body">
+						<p>Liberty Village Cohousing</p>
+						<p>
+							Tech: WordPress, Elementor, Google Calendar integration, custom
+							HTML & CSS
+						</p>
+					</div>
 				</div>
 
 				<div class="work-card">
@@ -137,7 +154,7 @@
 			</section>
 		</main>
 
-		<!-- Bottom Divider -->
+		<!------ Bottom Divider ------>
 		<section class="grid">
 			<img src="./assets/line.svg" alt="squiggle" class="wave-divide-sub" />
 		</section>
